# between

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_log.txt  docker-compose.yml  prd_silence_module_between_platform.md
migration/: Cargo.toml  lib.rs  m20241216000001_create_users.rs  m20241216000003_create_silence_sessions.rs  m20241216000004_create_indexes.rs  m20251223000001_add_termination_reason_to_silence_sessions.rs  m20251225000001_create_decisions.rs  m20251225000002_create_decision_indexes.rs  m20251226000001_create_user_activities.rs  m20251226000002_create_user_activity_indexes.rs  main.rs
mobile/: .gitignore  README.md  build.yaml  pubspec.yaml  spec.json
mobile/android/app/: build.gradle.kts
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/config/env/: env.dart  env_config.dart
mobile/lib/config/router/: app_router.dart  app_router.g.dart
mobile/lib/config/theme/: app_animations.dart  app_chart_theme.dart  app_colors.dart  app_spacing.dart  app_theme.dart  (+1 more)
src/: app.rs  lib.rs  main.rs  openapi.rs
src/application/activity/: handler.rs
src/application/context/: handler.rs
src/application/decision/: handler.rs
src/application/health/: handler.rs
src/application/profile/: handler.rs
src/application/silence/: handler.rs
src/application/user/: handler.rs
src/config/: mod.rs
src/db/: pool.rs
src/domain/: mod.rs
src/domain/activity/: entity.rs  repository.rs  service.rs
src/domain/context/: entity.rs  mod.rs  repository.rs  service.rs
src/domain/decision/: context.rs  entity.rs  mod.rs  repository.rs  service.rs
src/domain/profile/: service.rs
src/domain/silence/: context.rs  mod.rs  repository.rs  service.rs  session.rs
src/domain/user/: entity.rs  mod.rs  repository.rs  service.rs
src/infrastructure/: mod.rs
src/infrastructure/activity/: mod.rs  repo_sql.rs
src/infrastructure/context/: mod.rs  repo_sql.rs
src/infrastructure/decision/: mod.rs  repo_sql.rs
src/infrastructure/shutdown/: handler.rs  mod.rs  signals.rs
src/infrastructure/silence/: mod.rs  repo_sql.rs
src/infrastructure/user/: mod.rs  repo_sql.rs
src/shared/: error.rs  mod.rs  response.rs
src/shared/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
src/shared/extractors/: json.rs  mod.rs
src/shared/schema/: activity.rs  context.rs  decision.rs  health.rs  mod.rs  profile.rs  silence.rs  user.rs
(+164 files in other folders)
